# grievance-ai-system

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: CICD.yaml
docs/: alembic_guide.md  api-key-auth.md
infra/alembic/: env.py
infra/alembic/versions/: 20260422_create_api_keys_table.py
migrations/: env.py
migrations/versions/: 2649d61b8cef_initial_migration.py  e820b19e34c1_added_new_tables.py
scripts/: run_workers.sh
services/analytics-service/: config.py  main.py
services/api-gateway/: requirements.txt
services/api-gateway/app/: config.py  main.py  schemas.py
services/asr-service/: Dockerfile  requirements.txt
services/asr-service/app/: config.py  inference.py  main.py
services/audio-service/: Dockerfile  requirements.txt
services/audio-service/app/: config.py  main.py
services/auth-service/app/: api_keys.py
services/auth_service/: config.py
services/auth_service/app/: api_keys.py
services/crud/: app.py  audio.py  category.py  grievance.py
services/language-service/: Dockerfile
services/language-service/app/: config.py  detector.py  main.py
services/middleware/: api_key_middleware.py
services/nlp-service/: Dockerfile
services/nlp-service/app/: main.py  (+1 more)
services/persistence-service/: Dockerfile
services/translation-service/: Dockerfile
services/urgency-service/: Dockerfile
shared/database/: models.py  session.py
shared/messaging/: __init__.py  events.py  exchanges.py  queues.py  rabbitmq.py
shared/utils/: logger.py
tests/: test_pipeline.py
(+27 files in other folders)
