[tool.poetry]
name = "sentiment-grievance-system"
version = "0.1.0"
description = "Distributed event-driven sentiment analysis system"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
